--- a/package.json
+++ b/package.json
@@ -21,7 +21,13 @@
     "typescript": "~3.9.7"
   },
   "dependencies": {
+    "@aws-cdk/aws-apigateway": "^1.101.0",
+    "@aws-cdk/aws-codepipeline": "^1.101.0",
+    "@aws-cdk/aws-codepipeline-actions": "^1.101.0",
+    "@aws-cdk/aws-lambda": "^1.101.0",
     "@aws-cdk/core": "1.101.0",
+    "@aws-cdk/pipelines": "^1.101.0",
+    "@types/aws-lambda": "^8.10.76",
     "source-map-support": "^0.5.16"
   }
 }
